Add required files

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allen Chang's Website</title>
+    <title>About | Allen Chang's Website</title>
     <style>
         #side{
             position: fixed;
@@ -69,9 +69,13 @@
         0
     </div>
     <div id="content">
-        <h1>Allen Chang</h1>
-        <p>網頁待完成......</p>
+        <h1>About Me</Menu></h1>
+        <h3>張育綸</h3>
+        <ul style="list-style-type: disc;">
+            <li>
+                Studying in Taipei Municipal Chien Kuo High School
+            </li>
+        </ul>
     </div>
-
 </body>
 </html>
