--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allen Chang's Website</title>
+    <title>Project | Allen Chang's Website</title>
     <style>
         #side{
             position: fixed;
@@ -69,9 +69,8 @@
         0
     </div>
     <div id="content">
-        <h1>Allen Chang</h1>
+        <h1>Project</h1>
         <p>網頁待完成......</p>
     </div>
-
 </body>
 </html>
