--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 <body bgcolor="#e0ff2c">
     <div id="side">
         <div id="soption">
-            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="shuba247.github.io"><input class="sideb" type="button" value="Home" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
