--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allen Chang's Website</title>
+    <link rel="icon" href="/pictures/favicon.ico">
     <style>
         #side{
             position: fixed;
@@ -16,14 +17,7 @@
             top: 0;
             left: 0;
             z-index: 1000;
-        }
-        #slink{
-            position: fixed;
-            width: 10%;
-            bottom: 0;
-            color: #ffffff;
-            text-align: center;
-        }
+        }        
         .sideb{
             border: 0;
             background-color: #000000;
@@ -51,19 +45,14 @@
     </style>
 </head>
 <body bgcolor="#e0ff2c">
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
         <div id="soption">
-            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-        </div>
-        <div id="slink">
-            <hr>
-            <p style="font-size: large;">Link</p>
-            <a href="https://twitter.com/summit_AMT"><input class="sideb" type="button" value="Twitter" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="https://github.com/shuba247"><input class="sideb" type="button" value="Github" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-        </div>
+            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+        </div>        
     </div>
     <div id="sideleft">
         0
