--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project | Allen Chang's Website</title>
+    <title>Allen Chang's Website</title>
     <link rel="icon" href="/pictures/favicon.ico">
     <style>
         #side{
@@ -58,8 +58,8 @@
         0
     </div>
     <div id="content">
-        <h1>Project</h1>
-        <p>網頁待完成......</p>
+        <h1>test</h1>
     </div>
+
 </body>
 </html>
