--- a/about.html
+++ b/about.html
@@ -5,24 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Allen Chang's Website</title>
+    <link rel="icon" href="/pictures/favicon.ico">
     <style>
         #side{
             position: fixed;
             width: 10%;
             height: 100%;
-            overflow-y: hidden;
+            overflow-y: auto;
             overflow-x: hidden;
             background-color: #000000;
+            text-align: center;
+            color: #ffffff;
             top: 0;
             left: 0;
             z-index: 1000;
-        }
-        #slink{
-            position: fixed;
-            width: 10%;
-            bottom: 0;
-            color: #ffffff;
-            text-align: center;
         }
         .sideb{
             border: 0;
@@ -48,34 +44,79 @@
             width: 89%;
             height: 1700px;
         }
+        .inline-block{
+            display: inline-block;
+        }
+        .contact{
+            vertical-align: middle;
+            align-items: center;
+            display: flex;
+            margin: 0 auto;
+            margin-top: 20px;
+            
+        }
+        .contact:hover{
+            color: gray;
+        }
     </style>
 </head>
 <body bgcolor="#e0ff2c">
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
         <div id="soption">
-            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-        </div>
-        <div id="slink">
-            <hr>
-            <p style="font-size: large;">Link</p>
-            <a href="https://twitter.com/summit_AMT"><input class="sideb" type="button" value="Twitter" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="https://github.com/shuba247"><input class="sideb" type="button" value="Github" style="font-size: medium; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
         </div>
     </div>
     <div id="sideleft">
         0
     </div>
     <div id="content">
-        <h1>About Me</Menu></h1>
-        <h3>張育綸</h3>
-        <ul style="list-style-type: disc;">
-            <li>
+        <h1>About Me</h1>
+        <h3>張育綸 Allen Chang</h3>
+        <p>簡介 Brief</p>
+        <blockquote>
+            <p>
+                就讀於台北市立建國高級中學<br>
                 Studying in Taipei Municipal Chien Kuo High School
+            </p>
+        </blockquote>
+        <blockquote>
+            <p>語言能力：</p>
+            <ul style="list-style-type: none;">
+            <li>
+                母語中文，英文尚能溝通，日文N4，韓文、德文學習中<br>
+                My native language is Taiwanese Mandarin, and I can communicate in English,
+            </li>
+            <li>
+                C/C++初學，正在嘗試用Python開發簡單的小工具，學習建立網頁中，對資安也有興趣<br>
             </li>
         </ul>
+        </blockquote>
+        
+        <br>
+        <div style="width: fit-content; height: fit-content; align-items: flex-start;">
+            <a href="https://twitter.com/summit_AMT" target="_blank" class="contact" style="text-decoration: none;">
+                <svg width="20px" height="20px" class="inline-block" style="margin-right: 5px; padding:0%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        viewBox="0 0 248 204" style="enable-background:new 0 0 248 204;" xml:space="preserve">
+                    <path fill="currentColor" d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04
+		C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66
+		c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64
+		c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76
+		c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26
+		c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z"/>
+                </svg>
+                <span><span class="inline-block" style="font-size: 20px; padding: 0%;">Twitter</span></span>
+            </a>
+            <a href="https://github.com/shuba247" target="_blank" class="contact" style="text-decoration: none;">
+                <svg viewBox="0 0 24 24" width="20px" height="20px" class="inline-block" style="margin-right: 5px; padding:0%">
+                    <path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"></path>
+                </svg>
+                <span><span class="inline-block" style="font-size: 20px; padding: 0%;">GitHub</span></span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
