--- a/about.html
+++ b/about.html
@@ -79,22 +79,37 @@
         <p>簡介 Brief</p>
         <blockquote>
             <p>
-                就讀於台北市立建國高級中學<br>
-                Studying in Taipei Municipal Chien Kuo High School
+                我目前就讀於台北市立建國高級中學<br>
+                I'm now studying in Taipei Municipal Chien Kuo High School
+            </p>
+            <p>
+                C/C++初學，正在嘗試用Python開發簡單的小工具，學習建立網頁中，對資安也有興趣<br>
             </p>
         </blockquote>
-        <blockquote>
-            <p>語言能力：</p>
-            <ul style="list-style-type: none;">
-            <li>
-                母語中文，英文尚能溝通，日文N4，韓文、德文學習中<br>
-                My native language is Taiwanese Mandarin, and I can communicate in English,
-            </li>
-            <li>
-                C/C++初學，正在嘗試用Python開發簡單的小工具，學習建立網頁中，對資安也有興趣<br>
-            </li>
-        </ul>
-        </blockquote>
+        <p>語言能力 Language Ability</p>
+            <ul style="list-style-type: none; ">
+                <li style="margin-bottom: 10px;">
+                    中文(中華民國國語)：母語<br>
+                    Taiwanese Mandarin: Native
+                </li>
+                <li style="margin-bottom: 5px;">
+                    英文：中等，尚能溝通，CEFR B1<br>
+                    English: Intermediate (CEFR B1)
+                </li>
+                <li style="margin-bottom: 5px;">
+                    日文：JLPT N4<br>
+                    Japanese: JLPT N4
+                </li>
+                <li style="margin-bottom: 5px;">
+                    韓文：學習中<br>
+                    Korean: Beginner
+                </li>
+                <li style="margin-bottom: 5px;">
+                    德文：學習中<br>
+                    German: Beginner
+                </li>
+            </ul>
+        
         
         <br>
         <div style="width: fit-content; height: fit-content; align-items: flex-start;">
@@ -112,7 +127,7 @@
             </a>
             <a href="https://github.com/shuba247" target="_blank" class="contact" style="text-decoration: none;">
                 <svg viewBox="0 0 24 24" width="20px" height="20px" class="inline-block" style="margin-right: 5px; padding:0%">
-                    <path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"></path>
+                    <path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
                 </svg>
                 <span><span class="inline-block" style="font-size: 20px; padding: 0%;">GitHub</span></span>
             </a>
