--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             position: fixed;
             width: 10%;
             height: 100%;
-            overflow-y: hidden;
+            overflow-y: auto;
             overflow-x: hidden;
             background-color: #000000;
             top: 0;
