--- a/project.html
+++ b/project.html
@@ -14,10 +14,22 @@
             overflow-y: auto;
             overflow-x: hidden;
             background-color: #000000;
+            text-align: center;
+            color: #ffffff;
             top: 0;
             left: 0;
             z-index: 1000;
-        }        
+        }
+        #shead{
+            float: left;
+            width: 100%;
+            height: fit-content;
+        }
+        #soption{
+            float: left;
+            width: 100%;
+            height: fit-content;
+        }
         .sideb{
             border: 0;
             background-color: #000000;
@@ -34,25 +46,33 @@
         #sideleft{
             float: left;
             width: 11%;
-            height: 1700px;
+            height: fit-content;
             color: #e0ff2c;
         }
         #content{
             float: left;
             width: 89%;
-            height: 1700px;
+            height: fit-content;
         }
     </style>
 </head>
 <body bgcolor="#e0ff2c">
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
+        <div id="shead">
+            <a href="index.html">
+                <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
+            </a>
+            <p style="font-size: smaller;">
+                devoloped by Allen Chang<br>
+                updated on 2023.02.27
+            </p>
+        </div>
         <div id="soption">
-            <a href="index.html"><input class="sideb" type="button" value="Home" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="about.html"><input class="sideb" type="button" value="About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="project.html"><input class="sideb" type="button" value="Project" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="test.html"><input class="sideb" type="button" value="Test" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-        </div>        
+        </div>
     </div>
     <div id="sideleft">
         0
