--- a/about.html
+++ b/about.html
@@ -87,15 +87,17 @@
         <div style="width: 89%; height: 10%; float: left;">
             <div style="width: fit-content;">
                 <h3>張育綸 Allen Chang</h3>
-                <p>
+                <p style="margin-bottom: 0%;">
                     鼓動の奥  仕舞い込んだ夜から、<wbr>
                     滲んでいく  明日へ続くメロディー。<br>
                     胸を  開き  溢れ出してく、<wbr>
                     私だけの  ストーリー。
                 </p>
-                <a href="https://www.youtube.com/watch?v=a117kgda0sw" style="text-decoration: none; color: #000000; text-align: right;">
-                    <p>── HACHI〈光の向こうへ〉</p>
-                </a>
+                <div style="width: fit-content; height: fit-content; float: right; margin: 0%;">
+                    <a href="https://www.youtube.com/watch?v=a117kgda0sw" target="_blank" style="text-decoration: none; color: #000000; text-align: right; margin: 0%;">
+                        <p>── HACHI〈光の向こうへ〉</p>
+                    </a>
+                </div>
             </div>
         </div>
         <div style="width: 100%; float: left;">
