Upload most of the website content on 2023.02.28

--- a/info.html
+++ b/info.html
@@ -55,9 +55,16 @@
             width: 89%;
             height: fit-content;
         }
+        .source{
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .source a{
+            color: #000000;
+        }
     </style>
 </head>
-<body bgcolor="#e0ff2c">
+<body bgcolor="#81D8D0">
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
         <div id="shead">
@@ -78,7 +85,41 @@
     </div>
     <div id="sideleft">0</div>
     <div id="content">
-        <h1>test</h1>
+        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">網站資訊 Website Information</h1>
+        <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" target="_blank" style="color: #0000ff">完整資訊 Complete Information</a>
+        <h3>網站全域使用資源 Resources used throughout the site</h3>
+        <ul style="list-style: disc;">
+            <li class="source">
+                icon: 
+                <a href="https://pbs.twimg.com/media/EmSZJ_vUcAAV4nk.jpg" target="_blank">
+                    https://pbs.twimg.com/media/EmSZJ_vUcAAV4nk.jpg
+                </a>
+            </li>
+            <li class="source">
+                mark: Made by myself
+            </li>
+        </ul>
+        <h3>首頁使用資源 Resources used in index.html</h3>
+        <ul style="list-style: disc;">
+            <li class="source">
+                Countdown: 
+                <a href="https://www.tickcounter.com/" target="_blank">
+                    https://www.tickcounter.com/
+                </a>
+            </li>
+            <li class="source">
+                Twitter svg:
+                <a href="https://github.com/twitter/opensource-website/blob/2887311216d99cd0e38b16e564bcdbea3797eb63/static/assets/twitter-logo.svg?short_path=d16b6a7" target="_blank">
+                    https://github.com/twitter/opensource-website/blob/2887311216d99cd0e38b16e564bcdbea3797eb63/static/assets/twitter-logo.svg?short_path=d16b6a7
+                </a>
+            </li>
+            <li class="source">
+                GitHub svg:
+                <a href="https://hannah082023.github.io/" target="_blank">
+                    https://hannah082023.github.io/
+                </a>
+            </li>
+        </ul>
     </div>
 
 </body>
