modified wrong part on 2023.02.28

--- a/project.html
+++ b/project.html
@@ -91,74 +91,82 @@
         </div>
         <div id="soption">
             <a href="about.html"><input class="sideb" type="button" value="About Me" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="My Project" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="My Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="info.html"><input class="sideb" type="button" value="Website Info" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
             <a href="test.html"><input class="sideb" type="button" value="Test Page" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
         </div>
     </div>
     <div id="sideleft">0</div>
     <div id="content">
-        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的作品 My Project</h1>
-        <div class="conblock" onclick="window.open('https://shuba247.github.io')">
-            <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                <img src="/pictures/project_use/PW.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案&作品 My Projects</h1>
+        <a href="https://github.com/shuba247/Shuba_YouTube-video-downloader" target="_blank">
+            <div class="conblock">
+                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
+                    <img src="/pictures/project_use/YTdownload.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+                </div>
+                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
+                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">YouTube影片下載器</p>
+                    <p style="font-size: 25px; margin: 0%;">YouTube Video Downloader</p>
+                </div>
+                <div style="float: left; width: 46%; height: 260px; margin-top: 20px; margin-bottom: 20px;">
+                    <p style="font-size: 18px;">
+                        110學年度第2學期自主學習項目<br>
+                        Self-directed study project in the second semester of the 110 academic year.
+                    </p>
+                </div>
             </div>
-            <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">我的個人網站</p>
-                <p style="font-size: 25px; margin: 0%;">My Portfolio Website</p>
+        </a>
+        <a href="https://shuba247.github.io" target="_blank">
+            <div class="conblock">
+                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
+                    <img src="/pictures/project_use/PW.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+                </div>
+                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
+                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">我的個人網站</p>
+                    <p style="font-size: 25px; margin: 0%;">My Portfolio Website</p>
+                </div>
+                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                    <p style="font-size: 18px;">
+                        由我自己建置的個人網站<br>
+                        A portfolio website that developed by myself.
+                    </p>
+                </div>
             </div>
-            <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                <p style="font-size: 18px;">
-                    由我自己建置的個人網站。<br>
-                    A portfolio website that developed by myself.
-                </p>
+        </a>
+        <a href="/" target="_blank">
+            <div class="conblock">
+                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
+                    <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
+                </div>
+                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
+                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
+                    <p style="font-size: 25px; margin: 0%;">Title</p>
+                </div>
+                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                    <p style="font-size: 18px;">
+                        中文敘述<br>
+                        English introduce
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="conblock" onclick="window.open('https://github.com/shuba247/Shuba_YouTube-video-downloader')">
-            <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                <img src="/pictures/project_use/YTdownload.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+        </a>
+        <a href="/" target="_blank">
+            <div class="conblock">
+                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
+                    <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
+                </div>
+                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
+                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
+                    <p style="font-size: 25px; margin: 0%;">Title</p>
+                </div>
+                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                    <p style="font-size: 18px;">
+                        中文敘述<br>
+                        English introduce
+                    </p>
+                </div>
             </div>
-            <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">YouTube影片下載器</p>
-                <p style="font-size: 25px; margin: 0%;">YouTube Video Downloader</p>
-            </div>
-            <div style="float: left; width: 46%; height: 260px; margin-top: 20px; margin-bottom: 20px;">
-                <p style="font-size: 18px;">
-                    110學年度第2學期自主學習項目。<br>
-                    Self-directed study project in the second semester of the 110 academic year.
-                </p>
-            </div>
-        </div>
-        <div class="conblock" onclick="window.open('/')">
-            <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
-            </div>
-            <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
-                <p style="font-size: 25px; margin: 0%;">Title</p>
-            </div>
-            <div style="float: left; width: 46%; height: 260px; margin-top: 20px; margin-bottom: 20px;">
-                <p style="font-size: 18px;">
-                    中文介紹<br>
-                    English introduce
-                </p>
-            </div>
-        </div>
-        <div class="conblock" onclick="window.open('/')">
-            <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
-            </div>
-            <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
-                <p style="font-size: 25px; margin: 0%;">Title</p>
-            </div>
-            <div style="float: left; width: 46%; height: 260px; margin-top: 20px; margin-bottom: 20px;">
-                <p style="font-size: 18px;">
-                    中文介紹<br>
-                    English introduce
-                </p>
-            </div>
-        </div>
+        </a>
     </div>
 </body>
 </html>
