--- a/info.html
+++ b/info.html
@@ -90,19 +90,19 @@
         <h3>網站全域使用資源 Resources used throughout the site</h3>
         <ul style="list-style: disc;">
             <li class="source">
-                icon: 
+                網站圖示 Favicon: 
                 <a href="https://pbs.twimg.com/media/EmSZJ_vUcAAV4nk.jpg" target="_blank">
                     https://pbs.twimg.com/media/EmSZJ_vUcAAV4nk.jpg
                 </a>
             </li>
             <li class="source">
-                mark: Made by myself
+                網站標誌 Website Mark: Made by myself
             </li>
         </ul>
         <h3>首頁使用資源 Resources used in index.html</h3>
         <ul style="list-style: disc;">
             <li class="source">
-                Countdown: 
+                倒數計時器 Countdown: 
                 <a href="https://www.tickcounter.com/" target="_blank">
                     https://www.tickcounter.com/
                 </a>
