--- a/about.html
+++ b/about.html
@@ -6,81 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Allen Chang's Website</title>
     <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="stylesheet" href="/styles/main.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700;1,900&display=swap');
-        #side{
-            position: fixed;
-            width: 10%;
-            height: 100%;
-            overflow-y: auto;
-            overflow-x: hidden;
-            background-color: #000000;
-            text-align: center;
-            color: #ffffff;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-        #shead{
-            float: left;
-            width: 100%;
-            height: fit-content;
-        }
-        #soption{
-            float: left;
-            width: 100%;
-            height: fit-content;
-        }
-        .sideb{
-            border: 0;
-            background-color: #000000;
-            color: #ffffff;
-            cursor: pointer;
-            margin-top: 4px;
-            margin-bottom: 4px;
-        }
-        .sideb:hover{
-            border: 0;
-            background-color: #ffffff;
-            color: #000000;
-        }
-        #sideleft{
-            float: left;
-            width: 11%;
-            height: fit-content;
-            color: #e0ff2c;
-        }
-        #content{
-            float: left;
-            width: 89%;
-            height: fit-content;
-        }
 
     </style>
 </head>
 <body bgcolor="#81D8D0">
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
         <div id="shead">
             <a href="/">
                 <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
             </a>
             <p style="font-size: smaller;">
-                devoloped by Allen Chang<br>
-                updated on 2023-02-28
+                devoloped by 
+                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="color: #ffffff;">Allen Chang</a>
+                <br>
+                updated on 2023-03-01
             </p>
         </div>
         <div id="soption">
-            <a href="about.html"><input class="sideb" type="button" value="About Me" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="My Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="info.html"><input class="sideb" type="button" value="Website Info" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="Test Page" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="about.html"><input class="sideb" type="button" value="關於 About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="專案 Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="test.html"><input class="sideb" type="button" value="文章 Articles" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
         </div>
     </div>
     <div id="sideleft">0</div>
     <div id="content">
-        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">關於我 About Me</h1>
-        
+        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">個人簡介 About Me</h1>
+        <p>#未完成......</p>
         <div style="width: 10%; height: 10%; margin-right: 1%; float: left;">
             <img src="pictures/profile.png" style="width: 100%;">
         </div>
