--- a/project.html
+++ b/project.html
@@ -6,144 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project | Allen Chang's Website</title>
     <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/project.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700;1,900&display=swap');
-        #side{
-            position: fixed;
-            width: 10%;
-            height: 100%;
-            overflow-y: auto;
-            overflow-x: hidden;
-            background-color: #000000;
-            text-align: center;
-            color: #ffffff;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-        #shead{
-            float: left;
-            width: 100%;
-            height: fit-content;
-        }
-        #soption{
-            float: left;
-            width: 100%;
-            height: fit-content;
-        }
-        .sideb{
-            border: 0;
-            background-color: #000000;
-            color: #ffffff;
-            cursor: pointer;
-            margin-top: 4px;
-            margin-bottom: 4px;
-        }
-        .sideb:hover{
-            border: 0;
-            background-color: #ffffff;
-            color: #000000;
-        }
-        #sideleft{
-            float: left;
-            width: 11%;
-            height: fit-content;
-            color: #e0ff2c;
-        }
-        #content{
-            float: left;
-            width: 89%;
-            height: fit-content;
-        }
-        .conblock{
-            float: left;
-            width: 97%;
-            height: 400px;
-            background-color: rgba(255, 255, 255, 0.75);
-            margin-left: 1%;
-            margin-right: 2%;
-            margin-bottom: 2%;
-            border-radius: 15px;
-            cursor:pointer;
-            overflow: hidden;
-            transform:scale(1,1);
-            transition: all 0.5s ease-out;
-            color: #000000;
-        }
-        .conblock:hover{
-            transform:scale(1.02,1.02);
-            background-color: rgba(255, 255, 255, 0.5);
-            color: #777777;
-        }
+
     </style>
 </head>
 <body bgcolor="#81D8D0">
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <div id="side">
         <div id="shead">
             <a href="/">
                 <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
             </a>
             <p style="font-size: smaller;">
-                devoloped by Allen Chang<br>
-                updated on 2023-02-28
+                devoloped by 
+                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="color: #ffffff;">Allen Chang</a>
+                <br>
+                updated on 2023-03-01
             </p>
         </div>
         <div id="soption">
-            <a href="about.html"><input class="sideb" type="button" value="About Me" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="My Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="info.html"><input class="sideb" type="button" value="Website Info" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="Test Page" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="about.html"><input class="sideb" type="button" value="關於 About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="專案 Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="test.html"><input class="sideb" type="button" value="文章 Articles" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
         </div>
     </div>
     <div id="sideleft">0</div>
     <div id="content">
-        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案&作品 My Projects</h1>
+        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案 My Projects</h1>
         <a href="https://github.com/shuba247/Shuba_YouTube-video-downloader" target="_blank">
-            <div class="conblock">
-                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                    <img src="/pictures/project_use/YTdownload.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+            <div class="problock">
+                <div class="proimage">
+                    <img src="/pictures/project_use/YTdownload.png" alt="thumbnail">
                 </div>
-                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">YouTube影片下載器</p>
-                    <p style="font-size: 25px; margin: 0%;">YouTube Video Downloader</p>
+                <div class="protitle">
+                    <p class="prozhtitle">YouTube影片下載器</p>
+                    <p class="proentitle">YouTube Video Downloader</p>
                 </div>
-                <div style="float: left; width: 46%; height: 260px; margin-top: 20px; margin-bottom: 20px;">
-                    <p style="font-size: 18px;">
+                <div class="procontent">
+                    <p class="probrief">
                         110學年度第2學期自主學習項目<br>
-                        Self-directed study project in the second semester of the 110 academic year.
+                        Self-directed Learning project in the second semester of the 110 academic year.
                     </p>
                 </div>
             </div>
         </a>
         <a href="https://shuba247.github.io" target="_blank">
-            <div class="conblock">
-                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                    <img src="/pictures/project_use/PW.png" style="line-height: 360px; height: 100%;" alt="thumbnail">
+            <div class="problock">
+                <div class="proimage">
+                    <img src="/pictures/project_use/PW.png" alt="thumbnail">
                 </div>
-                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">我的個人網站</p>
-                    <p style="font-size: 25px; margin: 0%;">My Portfolio Website</p>
+                <div class="protitle">
+                    <p class="prozhtitle">我的個人網站</p>
+                    <p class="proentitle">My Personal Website</p>
                 </div>
                 <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p style="font-size: 18px;">
-                        由我自己建置的個人網站<br>
-                        A portfolio website that developed by myself.
+                    <p class="probrief">
+                        由我自己建置的個人網站，也就是你現在所在的網站<br>
+                        A website that developed by myself, which is where you are now.
                     </p>
                 </div>
             </div>
         </a>
         <a href="/" target="_blank">
-            <div class="conblock">
-                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                    <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
+            <div class="problock">
+                <div class="proimage">
+                    <img src="/" alt="thumbnail">
                 </div>
-                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
-                    <p style="font-size: 25px; margin: 0%;">Title</p>
+                <div class="protitle">
+                    <p class="prozhtitle">標題</p>
+                    <p class="proentitle">Title</p>
                 </div>
                 <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p style="font-size: 18px;">
+                    <p class="probrief">
                         中文敘述<br>
                         English introduce
                     </p>
@@ -151,16 +86,16 @@
             </div>
         </a>
         <a href="/" target="_blank">
-            <div class="conblock">
-                <div style="float: left; width: 50%;height: 360px; margin: 20px; text-align: center;">
-                    <img src="/" style="line-height: 360px; height: 100%;" alt="thumbnail">
+            <div class="problock">
+                <div class="proimage">
+                    <img src="/" alt="thumbnail">
                 </div>
-                <div style="float: left; width: 46%; height: 80px; margin-top: 20px;">
-                    <p style="font-size: 35px; margin: 0%; margin-bottom: 1%;">標題</p>
-                    <p style="font-size: 25px; margin: 0%;">Title</p>
+                <div class="protitle">
+                    <p class="prozhtitle">標題</p>
+                    <p class="proentitle">Title</p>
                 </div>
                 <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p style="font-size: 18px;">
+                    <p class="probrief">
                         中文敘述<br>
                         English introduce
                     </p>
