--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
     <style>
 
     </style>
@@ -19,7 +19,7 @@
             </a>
             <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
                 Copyright © 2023
-                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
+                <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
                 <br>
                 updated on 2023-03-01
             </p>
@@ -40,7 +40,7 @@
         </div>
         <div style="width: 89%; height: 10%; float: left;">
             <div style="width: fit-content;">
-                <h3>張育綸 Allen Chang</h3>
+                <h3>藍色男孩 BlueBoy</h3>
                 <p style="margin-bottom: 0%;">
                     鼓動の奥  仕舞い込んだ夜から、<wbr>
                     滲んでいく  明日へ続くメロディー。<br>
