--- a/project.html
+++ b/project.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/project.css">
+    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="/styles/project.css" media="screen and (min-width: 992px)">
     <style>
 
     </style>
@@ -20,7 +20,7 @@
             </a>
             <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
                 Copyright © 2023
-                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
+                <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
                 <br>
                 updated on 2023-03-01
             </p>
@@ -35,7 +35,7 @@
     <div id="sideleft">0</div>
     <div id="content">
         <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案 My Projects</h1>
-        <a href="https://github.com/shuba247/Shuba_YouTube-video-downloader" target="_blank">
+        <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
             <div class="problock">
                 <div class="proimage">
                     <img src="/pictures/project_use/YTdownload.png" alt="thumbnail">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </a>
-        <a href="https://shuba247.github.io" target="_blank">
+        <a href="https://blueboy247.github.io/" target="_blank">
             <div class="problock">
                 <div class="proimage">
                     <img src="/pictures/project_use/PW.png" alt="thumbnail">
