--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
     <style>
 
     </style>
@@ -19,7 +19,7 @@
             </a>
             <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
                 Copyright © 2023
-                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
+                <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
                 <br>
                 updated on 2023-03-01
             </p>
