--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="/scripts/countdownGSAT.js" as="script">
     <link rel="preload" href="/scripts/countdownSUBARU.js" as="script">
     <link rel="icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
     <style>
         .inline-block{
             display: inline-block;
@@ -35,9 +35,9 @@
             <a href="/">
                 <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
             </a>
-            <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
+            <p style="margin-top: 15px; font-size: 5%; margin-bottom: 12px;">
                 Copyright © 2023
-                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
+                <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
                 <br>
                 updated on 2023-03-01
             </p>
@@ -77,7 +77,7 @@
                 </svg>
                 <span><span class="inline-block" style="font-size: 20px; padding: 0%;">Twitter</span></span>
             </a>
-            <a href="https://github.com/shuba247" target="_blank" class="contact" style="text-decoration: none;">
+            <a href="https://github.com/BlueBoy247" target="_blank" class="contact" style="text-decoration: none;">
                 <svg viewBox="0 0 24 24" width="20px" height="20px" class="inline-block" style="margin-right: 5px; padding:0%">
                     <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
                 </svg>
