--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
     <style>
 
@@ -31,7 +32,7 @@
             <a href="test.html"><input class="sideb" type="button" value="文章 Articles"></a></br>
         </div>
     </div>
-    <div id="sideleft">0</div>
+    <div id="sideleft"><br></div>
     <div id="content">
         <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">個人簡介 About Me</h1>
         <p>#未完成......</p>
