--- a/project.html
+++ b/project.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="/styles/project-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/project.css" media="screen and (min-width: 992px)">
     <style>
 
@@ -32,7 +34,7 @@
             <a href="test.html"><input class="sideb" type="button" value="文章 Articles"></a></br>
         </div>
     </div>
-    <div id="sideleft">0</div>
+    <div id="sideleft"><br></div>
     <div id="content">
         <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案 My Projects</h1>
         <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
