--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="/scripts/countdownGSAT.js" as="script">
     <link rel="preload" href="/scripts/countdownSUBARU.js" as="script">
     <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
     <style>
         .inline-block{
@@ -49,7 +50,7 @@
             <a href="test.html"><input class="sideb" type="button" value="文章 Articles"></a></br>
         </div>
     </div>
-    <div id="sideleft">0</div>
+    <div id="sideleft"><br></div>
     <div id="content">
         <h1 style="font-size: 500%; text-align: center; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 0%;">BlueBoy's Space</h1>
         <div style="width: 50%; float: left; margin-top: 30px;">
