--- a/article/index.html
+++ b/article/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlueBoy's Space</title>
+    <title>test | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
-    <link rel="preload" href="/scripts/countdownSUBARU.js">
-    <link rel="preload" href="/scripts/countdownGSAT.js">
     <style>
 
     </style>
@@ -26,18 +24,7 @@
         </div>
     </header>
     <main style="height: 80vh;">
-        <div style="width: 50%; float: left; margin-top: 30px;">
-            <script async src="/scripts/countdownGSAT.js"></script>
-            <a data-type="countdown" data-id="3886391" class="tickcounter" style="display: block; width: 100%;" title="Countdown" href="//www.tickcounter.com/">
-                Countdown(113GSAT)
-            </a>
-        </div>
-        <div style="width: 50%; float: left; margin-top: 30px;">
-            <script async src="/scripts/countdownSUBARU.js"></script>
-            <a data-type="countdown" data-id="3885131" class="tickcounter" style="display: block; width: 100%; " title="Countdown" href="//www.tickcounter.com/">
-                Countdown(oozora_subaru_BD)
-            </a>
-        </div>
+        <h1>未啟用</h1>
     </main>
     <footer>
         <p id="siterights">
@@ -46,8 +33,6 @@
             </a>
              © 2023 All rights reserved.
         </p>
-
-        </div>
     </footer>
 </body>
 </html>
