--- a/project/index.html
+++ b/project/index.html
@@ -15,27 +15,17 @@
     </style>
 </head>
 <body bgcolor="#81D8D0">
-    <div id="side">
-        <div id="shead">
-            <a href="/">
-                <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
-            </a>
-            <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
-                Copyright © 2023
-                <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
-                <br>
-                updated on 2023-03-01
-            </p>
-            <hr>
+    <header>
+        <a id="shead" href="/">
+            <img src="/pictures/shead.png">
+        </a>
+        <div id="link-button">
+            <a class="navb" href="/about/">關於 About</a>
+            <a class="navb" href="/project/">專案 Projects</a>
+            <a class="navb" href="/article/">文章 Articles</a>
         </div>
-        <div id="soption">
-            <a href="about.html"><input class="sideb" type="button" value="關於 About" style="margin-top: 0px;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="專案 Projects"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="文章 Articles"></a></br>
-        </div>
-    </div>
-    <div id="sideleft"><br></div>
-    <div id="content">
+    </header>
+    <main>
         <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案 My Projects</h1>
         <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
             <div class="problock">
@@ -105,6 +95,14 @@
                 </div>
             </div>
         </a>
-    </div>
+    </main>
+    <footer>
+        <p id="siterights">
+            <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">
+                BlueBoy247
+            </a>
+             © 2023 All rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
